fix: Allow modal to overflow
The backups (and possibly other) have dropdown content that might overflow. overflow-hidden was initially added to cut out backgrounds from elements with a border radius.

--- a/app/javascript/scss/editor/_translation-settings.scss
+++ b/app/javascript/scss/editor/_translation-settings.scss
@@ -9,6 +9,7 @@
   gap: $margin * 0.125;
   padding: $margin * 0.25;
   border-top: 2px solid darken($bg-dark, 5%);
+  border-bottom-left-radius: $border-radius;
   background: $bg-darker;
 }
 
