--- a/app/javascript/scss/utilities/_border-radius.scss
+++ b/app/javascript/scss/utilities/_border-radius.scss
@@ -5,3 +5,7 @@
 .br-1\/2 {
   border-radius: $border-radius * 0.5;
 }
+
+.br-top {
+  border-radius: $border-radius $border-radius 0 0;
+}
